# flake8-maximo

./: .flake8  .gitignore  README.md  flake8_maximo.py  setup.cfg
requirements/: common.txt  dev.txt
tests/: flake8_maximo_test.py
