[metadata]
name = flake8-maximo
version = 0.1.0
description = A Flake8 plugin for detecting maximo related script issues
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SnowcolaLabs/flake8-maximo 
author = Anthony Keelan
author_email = anthony.keelan@gmail.com 
license = MIT
classifiers =
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = flake8_maximo
install_requires =
    flake8>=3.7.0
    importlib-metadata>=0.9;python_version<"3.8"
python_requires = >=3.6

[options.entry_points]
flake8.extension = 
    MAX=flake8_maximo:Plugin
